# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2014 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

MESSAGE(STATUS "Setting up: ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_SUBDIRECTORY(01_hello_world)
ADD_SUBDIRECTORY(02_gluttest)
ADD_SUBDIRECTORY(03_glutandbullet)
